style: fix font-size on mobile

--- a/assets/styles/components/_highlightjs.scss
+++ b/assets/styles/components/_highlightjs.scss
@@ -18,7 +18,7 @@
 
 .hljs-ln td {
 	@media (max-width: 576px) {
-		font-size: 8px !important;
+		font-size: 12px !important;
 	}
 }
 
